Change config to yaml